# pattern-recognition

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: db.csv  queries.csv  seq_times.csv
src/: sad.c  sad.h  setup.c  setup.h
src/file/: dumper.c  dumper.h  loader.c  loader.h
src/model/: dataset.c  dataset.h
src/parallel/: parallel.cu
src/sequential/: sad.c  sad.h  sequential.c  sequential.h  setup.c  setup.h
